[FIX]: Correcciones de la PR y sonarqube